fixes flex-wrap on articles

--- a/src/screens/Articles.css
+++ b/src/screens/Articles.css
@@ -1,27 +1,29 @@
 .article__section {
-    display: flex;
-    padding:0 90px 80px 90px;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 90px 80px 90px;
+}
 
-  .articles__section a {
-    text-decoration: none;
-  }
+.articles__section a {
+  text-decoration: none;
+}
 
-  .articles__section {
-    display: flex;
-    padding: 0 90px 80px 90px;
-  }
+.articles__section {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 90px 80px 90px;
+}
 
-  .services h1 {
-    text-align: center;
-    margin-bottom: 0;
-  }
-  .services p {
-    text-align: center;
-    margin-bottom: 0;
-  }
-  .culture{
-    padding-top: 20px;
-    color: #EDF0F2;
-    text-align: center;
-  }
+.services h1 {
+  text-align: center;
+  margin-bottom: 0;
+}
+.services p {
+  text-align: center;
+  margin-bottom: 0;
+}
+.culture {
+  padding-top: 20px;
+  color: #edf0f2;
+  text-align: center;
+}
